# sample-ai-agent-factory

./: README.md
Agentic-ai-self-service/backend/: .env.example  pyproject.toml  requirements-lambda.txt  run_tests.py
Agentic-ai-self-service/backend/src/app/: __init__.py  deployment_handler.py  lambda_handler.py  main.py  stream_handler.py
Agentic-ai-self-service/backend/tests/: __init__.py  conftest.py  live_generator_e2e.py  test_a2a_codegen.py  test_agent_generator.py  test_agent_versions_store.py  test_agentic_rag_codegen.py  test_api_property.py  test_approval_policies.py  test_async_delete.py  test_audit_analytics.py  test_auth_isolation.py  test_auto_cleanup_on_failure.py  test_auto_register.py  test_aws_agent_registry.py  test_budget.py  test_bundle_resolution_property.py  test_cedar_action_form.py  test_code_zip_structure_property.py  test_codegen_properties.py  test_codegen_templates.py  test_comprehensive_exploration.py  test_comprehensive_preservation.py  test_config.py  test_config_properties.py  test_connectors.py  test_connectors_catalog.py  test_cost_reconcile.py  test_cost_tracking.py  test_deploy_target.py  test_deployment_property.py  test_deployment_state_properties.py  test_dynamodb_storage_properties.py  test_e2e_gateway_memory.py  test_e2e_live_invocation.py  test_endpoint_readiness.py  test_evaluations_router.py  test_exploration_bugs.py  test_gateway_defects_matrix.py  test_gateway_deployer_ssrf.py  (+61 more)
Agentic-ai-self-service/backend/tests/integration/: conftest.py  test_deployment_lifecycle.py  test_template_deployments.py
(+533 files in other folders)
